# iac-agent

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
apps/cli/: bootstrap.py  main.py
buildspecs/: bootstrap.yml
data/catalog/: artifact_index.json  bootstrap_checkpoints.json  knowledge_base.json  metadata.json  repositories.json
data/catalog/modules/: s3.json
data/catalog/spokes/: caas-spoke.json
data/config/: repositories.seed.json
infra/terraform/: codebuild.tf  iam.tf  outputs.tf  s3.tf  secrets.tf  ssm.tf  variables.tf
src/iac_agent_bootstrap/: bootstrap_workflow.py  change_detector.py  checkpoint_store.py  config_provider.py  context.py  git_provider.py  knowledge_loader.py  main.py  models.py  publisher_factory.py
src/iac_agent_bootstrap/artifacts/: artifact_index_builder.py  artifact_query_service.py  artifact_reader.py  knowledge_artifact_builder.py  local_artifact_publisher.py
src/iac_agent_bootstrap/catalog/: knowledge_base_catalog.py  repository_catalog.py
src/iac_agent_bootstrap/config/: configuration_provider.py  configuration_provider_factory.py  local_seed_configuration_provider.py  ssm_configuration_provider.py
src/iac_agent_bootstrap/discovery/: dependency_discovery.py
src/iac_agent_bootstrap/domain/: repository_metadata.py
src/iac_agent_bootstrap/git/: base_git_provider.py  git_cli_provider.py  git_command_runner.py  git_repository_inspector.py  repository_sync_service.py
src/iac_agent_bootstrap/knowledge/: capability_query_service.py  change_decision_service.py  knowledge_repository.py  (+3 more)
(+38 files in other folders)
